--- a/pom.xml
+++ b/pom.xml
@@ -5,7 +5,7 @@
   <modelVersion>4.0.0</modelVersion>
   <groupId>dove</groupId>
   <artifactId>dove</artifactId>
-  <version>0.1.0</version>
+  <version>0.0.4-SNAPSHOT</version>
   <name>dove</name>
   <properties>
     <maven.compiler.source>1.8</maven.compiler.source>
@@ -49,7 +49,7 @@
       <plugin>
         <groupId>org.apache.avro</groupId>
         <artifactId>avro-maven-plugin</artifactId>
-        <version>1.8.1</version>
+        <version>1.8.2</version>
         <executions>
           <execution>
             <phase>generate-sources</phase>
@@ -61,6 +61,7 @@
             <configuration>
               <sourceDirectory>${basedir}/test-resources/</sourceDirectory>
               <outputDirectory>${basedir}/target/generated-sources/</outputDirectory>
+              <enableDecimalLogicalType>true</enableDecimalLogicalType>
             </configuration>
           </execution>
         </executions>
